scaffold-backend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scaffold-backend
spec:
  type: ClusterIP
  selector:
    app: scaffold-backend
  ports:
    - port: 80
      targetPort: 3000
